tests/baselines/reference/bigint-numeric-separator-literal-nzd-nsl-dds-dunder-err.errors.txt
bigint-numeric-separator-literal-nzd-nsl-dds-dunder-err.ts(38,2): error TS6188: Numeric separators are not allowed here.
bigint-numeric-separator-literal-nzd-nsl-dds-dunder-err.ts(38,3): error TS6189: Multiple consecutive numeric separators are not permitted.


==== bigint-numeric-separator-literal-nzd-nsl-dds-dunder-err.ts (2 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not appear adjacent to another
      NumericLiteralSeparator in DecimalIntegerLiteral
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    
      NumericLiteralSeparator ::
        _
    
      DecimalIntegerLiteral ::
        ...
        NonZeroDigit NumericLiteralSeparator_opt DecimalDigits
    
      NonZeroDigit :: one of
        1 2 3 4 5 6 7 8 9
    
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt, numeric-separator-literal]
    ---*/
    
    
    0__0123456789n;
     ~
!!! error TS6188: Numeric separators are not allowed here.
      ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    